// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`buildFlatGraph > returns a loaded extended graph object from model 1`] = `
{
  "edges": [
    {
      "id": "/do/4/step5-root-exit-node",
      "label": "",
      "sourceId": "/do/4/step5",
      "targetId": "root-exit-node",
    },
    {
      "id": "/do/3/step4-/do/4/step5",
      "label": "",
      "sourceId": "/do/3/step4",
      "targetId": "/do/4/step5",
    },
    {
      "id": "/do/2/step3-/do/3/step4",
      "label": "",
      "sourceId": "/do/2/step3",
      "targetId": "/do/3/step4",
    },
    {
      "id": "/do/1/step2-/do/2/step3",
      "label": "",
      "sourceId": "/do/1/step2",
      "targetId": "/do/2/step3",
    },
    {
      "id": "/do/0/step1-/do/1/step2",
      "label": "",
      "sourceId": "/do/0/step1",
      "targetId": "/do/1/step2",
    },
    {
      "id": "root-entry-node-/do/0/step1",
      "label": "",
      "sourceId": "root-entry-node",
      "targetId": "/do/0/step1",
    },
  ],
  "entryNode": {
    "id": "root-entry-node",
    "parent": {
      "edges": [
        {
          "id": "/do/4/step5-root-exit-node",
          "label": "",
          "sourceId": "/do/4/step5",
          "targetId": "root-exit-node",
        },
        {
          "id": "/do/3/step4-/do/4/step5",
          "label": "",
          "sourceId": "/do/3/step4",
          "targetId": "/do/4/step5",
        },
        {
          "id": "/do/2/step3-/do/3/step4",
          "label": "",
          "sourceId": "/do/2/step3",
          "targetId": "/do/3/step4",
        },
        {
          "id": "/do/1/step2-/do/2/step3",
          "label": "",
          "sourceId": "/do/1/step2",
          "targetId": "/do/2/step3",
        },
        {
          "id": "/do/0/step1-/do/1/step2",
          "label": "",
          "sourceId": "/do/0/step1",
          "targetId": "/do/1/step2",
        },
        {
          "id": "root-entry-node-/do/0/step1",
          "label": "",
          "sourceId": "root-entry-node",
          "targetId": "/do/0/step1",
        },
      ],
      "entryNode": [Circular],
      "exitNode": {
        "id": "root-exit-node",
        "parent": [Circular],
        "type": "end",
      },
      "id": "root",
      "label": undefined,
      "nodes": [
        [Circular],
        {
          "id": "root-exit-node",
          "parent": [Circular],
          "type": "end",
        },
        {
          "id": "/do/0/step1",
          "label": "step1",
          "parent": [Circular],
          "task": {
            "set": {
              "variable": "first task",
            },
          },
          "type": "set",
        },
        {
          "id": "/do/1/step2",
          "label": "step2",
          "parent": [Circular],
          "task": {
            "set": {
              "variable": "second task",
            },
          },
          "type": "set",
        },
        {
          "id": "/do/2/step3",
          "label": "step3",
          "parent": [Circular],
          "task": {
            "set": {
              "variable": "third task",
            },
          },
          "type": "set",
        },
        {
          "id": "/do/3/step4",
          "label": "step4",
          "parent": [Circular],
          "task": {
            "set": {
              "variable": "fourth task",
            },
          },
          "type": "set",
        },
        {
          "id": "/do/4/step5",
          "label": "step5",
          "parent": [Circular],
          "task": {
            "set": {
              "variable": "fifth task",
            },
          },
          "type": "set",
        },
      ],
      "parent": undefined,
      "task": undefined,
      "type": "root",
    },
    "type": "start",
  },
  "exitNode": {
    "id": "root-exit-node",
    "parent": {
      "edges": [
        {
          "id": "/do/4/step5-root-exit-node",
          "label": "",
          "sourceId": "/do/4/step5",
          "targetId": "root-exit-node",
        },
        {
          "id": "/do/3/step4-/do/4/step5",
          "label": "",
          "sourceId": "/do/3/step4",
          "targetId": "/do/4/step5",
        },
        {
          "id": "/do/2/step3-/do/3/step4",
          "label": "",
          "sourceId": "/do/2/step3",
          "targetId": "/do/3/step4",
        },
        {
          "id": "/do/1/step2-/do/2/step3",
          "label": "",
          "sourceId": "/do/1/step2",
          "targetId": "/do/2/step3",
        },
        {
          "id": "/do/0/step1-/do/1/step2",
          "label": "",
          "sourceId": "/do/0/step1",
          "targetId": "/do/1/step2",
        },
        {
          "id": "root-entry-node-/do/0/step1",
          "label": "",
          "sourceId": "root-entry-node",
          "targetId": "/do/0/step1",
        },
      ],
      "entryNode": {
        "id": "root-entry-node",
        "parent": [Circular],
        "type": "start",
      },
      "exitNode": [Circular],
      "id": "root",
      "label": undefined,
      "nodes": [
        {
          "id": "root-entry-node",
          "parent": [Circular],
          "type": "start",
        },
        [Circular],
        {
          "id": "/do/0/step1",
          "label": "step1",
          "parent": [Circular],
          "task": {
            "set": {
              "variable": "first task",
            },
          },
          "type": "set",
        },
        {
          "id": "/do/1/step2",
          "label": "step2",
          "parent": [Circular],
          "task": {
            "set": {
              "variable": "second task",
            },
          },
          "type": "set",
        },
        {
          "id": "/do/2/step3",
          "label": "step3",
          "parent": [Circular],
          "task": {
            "set": {
              "variable": "third task",
            },
          },
          "type": "set",
        },
        {
          "id": "/do/3/step4",
          "label": "step4",
          "parent": [Circular],
          "task": {
            "set": {
              "variable": "fourth task",
            },
          },
          "type": "set",
        },
        {
          "id": "/do/4/step5",
          "label": "step5",
          "parent": [Circular],
          "task": {
            "set": {
              "variable": "fifth task",
            },
          },
          "type": "set",
        },
      ],
      "parent": undefined,
      "task": undefined,
      "type": "root",
    },
    "type": "end",
  },
  "id": "root",
  "label": undefined,
  "nodes": [
    {
      "id": "root-entry-node",
      "label": undefined,
      "parentId": "root",
      "task": undefined,
      "type": "start",
    },
    {
      "id": "root-exit-node",
      "label": undefined,
      "parentId": "root",
      "task": undefined,
      "type": "end",
    },
    {
      "id": "/do/0/step1",
      "label": "step1",
      "parentId": "root",
      "task": {
        "set": {
          "variable": "first task",
        },
      },
      "type": "set",
    },
    {
      "id": "/do/1/step2",
      "label": "step2",
      "parentId": "root",
      "task": {
        "set": {
          "variable": "second task",
        },
      },
      "type": "set",
    },
    {
      "id": "/do/2/step3",
      "label": "step3",
      "parentId": "root",
      "task": {
        "set": {
          "variable": "third task",
        },
      },
      "type": "set",
    },
    {
      "id": "/do/3/step4",
      "label": "step4",
      "parentId": "root",
      "task": {
        "set": {
          "variable": "fourth task",
        },
      },
      "type": "set",
    },
    {
      "id": "/do/4/step5",
      "label": "step5",
      "parentId": "root",
      "task": {
        "set": {
          "variable": "fifth task",
        },
      },
      "type": "set",
    },
  ],
  "parent": undefined,
  "task": undefined,
  "type": "root",
}
`;

exports[`parseValidationErrorMessage > parses validation errors from workflow with validation errors 1`] = `
[
  {
    "errorType": "#/oneOf/0/required",
    "message": "must have required property 'call'",
    "object": {
      "missingProperty": "call",
    },
    "taskId": "/do/0/checkup",
  },
  {
    "errorType": "#/oneOf/1/required",
    "message": "must have required property 'call'",
    "object": {
      "missingProperty": "call",
    },
    "taskId": "/do/0/checkup",
  },
  {
    "errorType": "#/oneOf/2/required",
    "message": "must have required property 'call'",
    "object": {
      "missingProperty": "call",
    },
    "taskId": "/do/0/checkup",
  },
  {
    "errorType": "#/oneOf/3/required",
    "message": "must have required property 'call'",
    "object": {
      "missingProperty": "call",
    },
    "taskId": "/do/0/checkup",
  },
  {
    "errorType": "#/oneOf/4/required",
    "message": "must have required property 'call'",
    "object": {
      "missingProperty": "call",
    },
    "taskId": "/do/0/checkup",
  },
  {
    "errorType": "#/oneOf/5/required",
    "message": "must have required property 'call'",
    "object": {
      "missingProperty": "call",
    },
    "taskId": "/do/0/checkup",
  },
  {
    "errorType": "#/oneOf/6/required",
    "message": "must have required property 'call'",
    "object": {
      "missingProperty": "call",
    },
    "taskId": "/do/0/checkup",
  },
  {
    "errorType": "#/oneOf",
    "message": "must match exactly one schema in oneOf",
    "object": {
      "passingSchemas": null,
    },
    "taskId": "/do/0/checkup",
  },
  {
    "errorType": "#/oneOf/0/required",
    "message": "must have required property 'call'",
    "object": {
      "missingProperty": "call",
    },
    "taskId": "/do/0/checkup/do/1/checkup",
  },
  {
    "errorType": "#/oneOf/1/required",
    "message": "must have required property 'call'",
    "object": {
      "missingProperty": "call",
    },
    "taskId": "/do/0/checkup/do/1/checkup",
  },
  {
    "errorType": "#/oneOf/2/required",
    "message": "must have required property 'call'",
    "object": {
      "missingProperty": "call",
    },
    "taskId": "/do/0/checkup/do/1/checkup",
  },
  {
    "errorType": "#/oneOf/3/required",
    "message": "must have required property 'call'",
    "object": {
      "missingProperty": "call",
    },
    "taskId": "/do/0/checkup/do/1/checkup",
  },
  {
    "errorType": "#/oneOf/4/required",
    "message": "must have required property 'call'",
    "object": {
      "missingProperty": "call",
    },
    "taskId": "/do/0/checkup/do/1/checkup",
  },
  {
    "errorType": "#/oneOf/5/required",
    "message": "must have required property 'call'",
    "object": {
      "missingProperty": "call",
    },
    "taskId": "/do/0/checkup/do/1/checkup",
  },
  {
    "errorType": "#/oneOf/6/required",
    "message": "must have required property 'call'",
    "object": {
      "missingProperty": "call",
    },
    "taskId": "/do/0/checkup/do/1/checkup",
  },
  {
    "errorType": "#/oneOf",
    "message": "must match exactly one schema in oneOf",
    "object": {
      "passingSchemas": null,
    },
    "taskId": "/do/0/checkup/do/1/checkup",
  },
  {
    "errorType": "#/type",
    "message": "must be array",
    "object": {
      "type": "array",
    },
    "taskId": "/do/0/checkup/do/1/checkup/do",
  },
  {
    "errorType": "#/required",
    "message": "must have required property 'fork'",
    "object": {
      "missingProperty": "fork",
    },
    "taskId": "/do/0/checkup/do/1/checkup",
  },
  {
    "errorType": "#/required",
    "message": "must have required property 'emit'",
    "object": {
      "missingProperty": "emit",
    },
    "taskId": "/do/0/checkup/do/1/checkup",
  },
  {
    "errorType": "#/type",
    "message": "must be array",
    "object": {
      "type": "array",
    },
    "taskId": "/do/0/checkup/do/1/checkup/do",
  },
  {
    "errorType": "#/required",
    "message": "must have required property 'listen'",
    "object": {
      "missingProperty": "listen",
    },
    "taskId": "/do/0/checkup/do/1/checkup",
  },
  {
    "errorType": "#/required",
    "message": "must have required property 'raise'",
    "object": {
      "missingProperty": "raise",
    },
    "taskId": "/do/0/checkup/do/1/checkup",
  },
  {
    "errorType": "#/required",
    "message": "must have required property 'run'",
    "object": {
      "missingProperty": "run",
    },
    "taskId": "/do/0/checkup/do/1/checkup",
  },
  {
    "errorType": "#/required",
    "message": "must have required property 'set'",
    "object": {
      "missingProperty": "set",
    },
    "taskId": "/do/0/checkup/do/1/checkup",
  },
  {
    "errorType": "#/required",
    "message": "must have required property 'switch'",
    "object": {
      "missingProperty": "switch",
    },
    "taskId": "/do/0/checkup/do/1/checkup",
  },
  {
    "errorType": "#/required",
    "message": "must have required property 'try'",
    "object": {
      "missingProperty": "try",
    },
    "taskId": "/do/0/checkup/do/1/checkup",
  },
  {
    "errorType": "#/required",
    "message": "must have required property 'wait'",
    "object": {
      "missingProperty": "wait",
    },
    "taskId": "/do/0/checkup/do/1/checkup",
  },
  {
    "errorType": "#/oneOf",
    "message": "must match exactly one schema in oneOf",
    "object": {
      "passingSchemas": null,
    },
    "taskId": "/do/0/checkup/do/1/checkup",
  },
  {
    "errorType": "#/required",
    "message": "must have required property 'fork'",
    "object": {
      "missingProperty": "fork",
    },
    "taskId": "/do/0/checkup",
  },
  {
    "errorType": "#/required",
    "message": "must have required property 'emit'",
    "object": {
      "missingProperty": "emit",
    },
    "taskId": "/do/0/checkup",
  },
  {
    "errorType": "#/oneOf/0/required",
    "message": "must have required property 'call'",
    "object": {
      "missingProperty": "call",
    },
    "taskId": "/do/0/checkup/do/1/checkup",
  },
  {
    "errorType": "#/oneOf/1/required",
    "message": "must have required property 'call'",
    "object": {
      "missingProperty": "call",
    },
    "taskId": "/do/0/checkup/do/1/checkup",
  },
  {
    "errorType": "#/oneOf/2/required",
    "message": "must have required property 'call'",
    "object": {
      "missingProperty": "call",
    },
    "taskId": "/do/0/checkup/do/1/checkup",
  },
  {
    "errorType": "#/oneOf/3/required",
    "message": "must have required property 'call'",
    "object": {
      "missingProperty": "call",
    },
    "taskId": "/do/0/checkup/do/1/checkup",
  },
  {
    "errorType": "#/oneOf/4/required",
    "message": "must have required property 'call'",
    "object": {
      "missingProperty": "call",
    },
    "taskId": "/do/0/checkup/do/1/checkup",
  },
  {
    "errorType": "#/oneOf/5/required",
    "message": "must have required property 'call'",
    "object": {
      "missingProperty": "call",
    },
    "taskId": "/do/0/checkup/do/1/checkup",
  },
  {
    "errorType": "#/oneOf/6/required",
    "message": "must have required property 'call'",
    "object": {
      "missingProperty": "call",
    },
    "taskId": "/do/0/checkup/do/1/checkup",
  },
  {
    "errorType": "#/oneOf",
    "message": "must match exactly one schema in oneOf",
    "object": {
      "passingSchemas": null,
    },
    "taskId": "/do/0/checkup/do/1/checkup",
  },
  {
    "errorType": "#/type",
    "message": "must be array",
    "object": {
      "type": "array",
    },
    "taskId": "/do/0/checkup/do/1/checkup/do",
  },
  {
    "errorType": "#/required",
    "message": "must have required property 'fork'",
    "object": {
      "missingProperty": "fork",
    },
    "taskId": "/do/0/checkup/do/1/checkup",
  },
  {
    "errorType": "#/required",
    "message": "must have required property 'emit'",
    "object": {
      "missingProperty": "emit",
    },
    "taskId": "/do/0/checkup/do/1/checkup",
  },
  {
    "errorType": "#/type",
    "message": "must be array",
    "object": {
      "type": "array",
    },
    "taskId": "/do/0/checkup/do/1/checkup/do",
  },
  {
    "errorType": "#/required",
    "message": "must have required property 'listen'",
    "object": {
      "missingProperty": "listen",
    },
    "taskId": "/do/0/checkup/do/1/checkup",
  },
  {
    "errorType": "#/required",
    "message": "must have required property 'raise'",
    "object": {
      "missingProperty": "raise",
    },
    "taskId": "/do/0/checkup/do/1/checkup",
  },
  {
    "errorType": "#/required",
    "message": "must have required property 'run'",
    "object": {
      "missingProperty": "run",
    },
    "taskId": "/do/0/checkup/do/1/checkup",
  },
  {
    "errorType": "#/required",
    "message": "must have required property 'set'",
    "object": {
      "missingProperty": "set",
    },
    "taskId": "/do/0/checkup/do/1/checkup",
  },
  {
    "errorType": "#/required",
    "message": "must have required property 'switch'",
    "object": {
      "missingProperty": "switch",
    },
    "taskId": "/do/0/checkup/do/1/checkup",
  },
  {
    "errorType": "#/required",
    "message": "must have required property 'try'",
    "object": {
      "missingProperty": "try",
    },
    "taskId": "/do/0/checkup/do/1/checkup",
  },
  {
    "errorType": "#/required",
    "message": "must have required property 'wait'",
    "object": {
      "missingProperty": "wait",
    },
    "taskId": "/do/0/checkup/do/1/checkup",
  },
  {
    "errorType": "#/oneOf",
    "message": "must match exactly one schema in oneOf",
    "object": {
      "passingSchemas": null,
    },
    "taskId": "/do/0/checkup/do/1/checkup",
  },
  {
    "errorType": "#/required",
    "message": "must have required property 'listen'",
    "object": {
      "missingProperty": "listen",
    },
    "taskId": "/do/0/checkup",
  },
  {
    "errorType": "#/required",
    "message": "must have required property 'raise'",
    "object": {
      "missingProperty": "raise",
    },
    "taskId": "/do/0/checkup",
  },
  {
    "errorType": "#/required",
    "message": "must have required property 'run'",
    "object": {
      "missingProperty": "run",
    },
    "taskId": "/do/0/checkup",
  },
  {
    "errorType": "#/required",
    "message": "must have required property 'set'",
    "object": {
      "missingProperty": "set",
    },
    "taskId": "/do/0/checkup",
  },
  {
    "errorType": "#/required",
    "message": "must have required property 'switch'",
    "object": {
      "missingProperty": "switch",
    },
    "taskId": "/do/0/checkup",
  },
  {
    "errorType": "#/required",
    "message": "must have required property 'try'",
    "object": {
      "missingProperty": "try",
    },
    "taskId": "/do/0/checkup",
  },
  {
    "errorType": "#/required",
    "message": "must have required property 'wait'",
    "object": {
      "missingProperty": "wait",
    },
    "taskId": "/do/0/checkup",
  },
  {
    "errorType": "#/oneOf",
    "message": "must match exactly one schema in oneOf",
    "object": {
      "passingSchemas": null,
    },
    "taskId": "/do/0/checkup",
  },
]
`;

exports[`parseWorkflow > parses valid 'JSON' and returns model with no errors 1`] = `
{
  "errors": [],
  "model": Workflow {
    "do": TaskList [
      TaskItem {
        "step1": Task {
          "set": {
            "variable": "my first workflow",
          },
        },
      },
    ],
    "document": Document {
      "dsl": "1.0.3",
      "name": "valid-workflow-json",
      "namespace": "default",
      "version": "1.0.0",
    },
  },
}
`;

exports[`parseWorkflow > parses valid 'YAML' and returns model with no errors 1`] = `
{
  "errors": [],
  "model": Workflow {
    "do": TaskList [
      TaskItem {
        "step1": Task {
          "set": {
            "variable": "my first workflow",
          },
        },
      },
    ],
    "document": Document {
      "dsl": "1.0.3",
      "name": "valid-workflow-yaml",
      "namespace": "default",
      "version": "1.0.0",
    },
  },
}
`;

exports[`parseWorkflow > returns model and errors for invalid but parseable 'JSON' 1`] = `
{
  "errors": [
    {
      "errorType": "'Workflow' is invalid",
      "message": "The DSL version of the workflow 'undefined' doesn't match the supported version of the SDK '1.0.3'.",
    },
  ],
  "model": Workflow {
    "do": TaskList [
      TaskItem {
        "step1": Task {
          "set": {
            "variable": "my first invalid json workflow",
          },
        },
      },
    ],
  },
}
`;

exports[`parseWorkflow > returns model and errors for invalid but parseable 'YAML' 1`] = `
{
  "errors": [
    {
      "errorType": "'Workflow' is invalid",
      "message": "The DSL version of the workflow 'undefined' doesn't match the supported version of the SDK '1.0.3'.",
    },
  ],
  "model": Workflow {
    "do": TaskList [
      TaskItem {
        "step1": Task {
          "set": {
            "variable": "my first invalid yaml workflow",
          },
        },
      },
    ],
  },
}
`;

exports[`validateWorkflow > returns parsed validation errors for an invalid workflow 1`] = `
[
  {
    "errorType": "'Workflow' is invalid",
    "message": "The DSL version of the workflow 'undefined' doesn't match the supported version of the SDK '1.0.3'.",
  },
]
`;
